<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainMenuFragment"
    android:gravity="center"
    android:orientation="vertical">

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/GameRandomButton"
            android:text="Main mode" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/PlayButton"
        android:text="@string/play" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/MyLogos"
        android:text="@string/mylogos" />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/RandomName"
            android:text="DO NOT CLICK" />

    <Button
        android:id="@+id/btn_select_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_select_mode_text" />

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_settings_text" />

    <Button
        android:id="@+id/btn_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_gallery_text" />

    <Button
        android:id="@+id/btn_statistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_statistics_text" />

    <Button
        android:id="@+id/btn_mylogos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_mylogos_text" />

</androidx.appcompat.widget.LinearLayoutCompat>